--- a/frontend/src/components/posts/TagFilter.css
+++ b/frontend/src/components/posts/TagFilter.css
@@ -74,23 +74,15 @@
   font-size: 12px;
   color: #333;
   font-weight: 500;
+  border: 1px solid transparent;
+  border-radius: 999px;
+  padding: 2px 6px;
+  display: inline-block;
 }
 
 .tag-label.selected {
   font-weight: bold;
   font-size: 13px;
-}
-
-.tag-label.Negative {
-  color: #e15151;
-}
-
-.tag-label.Positive {
-  color: #4caf50;
-}
-
-.tag-label.Neutral {
-  color: #4aa3c0;
 }
 
 .filter-dropdown::-webkit-scrollbar {
