[u] Fix pop up transition [u] Clear location after choosing [u] Removed story prompts in tag filter

--- a/frontend/src/components/MapPopup.css
+++ b/frontend/src/components/MapPopup.css
@@ -255,6 +255,10 @@ body.popup-resizing * {
 }
 
 /* Override mapbox popup styling */
+.mapboxgl-popup.map-popup-story {
+  z-index: 2000;
+}
+
 .mapboxgl-popup-content {
   padding: 0 !important;
   overflow: hidden;
